tmp-server-8100.err.log
  File "<string>", line 1
    import
          ^
SyntaxError: Expected one or more names after 'import'
